# svdep

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  api.html  data_formats.html  genindex.html  index.html  ivpm.yaml  log  objects.inv  out  overview.html  pyproject.toml  search.html  searchindex.js  setup.py  setup.py.sav
.github/workflows/: ci.yml
_sources/: overview.rst.txt
cpp/: CMakeLists.txt
cpp/cmake/: svdep-config.cmake.in
cpp/src/: FileCollection.cpp  FileCollection.h  FileInfo.h  SVDepContext.cpp  SVDepContext.h  SVPreprocessor.cpp  SVPreprocessor.h  svdep.cpp
docs/: api.rst  conf.py  data_formats.rst  index.rst  native_impl.md
reference/: sv_preprocessor.md
src/svdep/: file_collection.py  file_collection_info.py  file_info.py  svpp_lexer.py  task_check_up_to_date.py  task_compute_file_deps.py
tests/: test_lexer.py  test_smoke.py
tests/data/test_smoke/: smoke1.sv
tests/unit/: conftest.py  test_native_basic.py  test_performance.py  test_preprocessor.py
