[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svdep"
version = "0.0.1"
dependencies = [ "ply" ]
readme = "README.md"

authors = [ {name = "Matthew Ballance", email = "matt.ballance@gmail.com"} ]

description = "Checks whether SystemVerilog need to be recompiled"

dynamic = ["license"]

[tool.setuptools.packages.find]
where = ["src"]